# backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  ALGOS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pylint.sh  pyproject.toml  start.sh  stop.sh
.github/workflows/: build-base.yml  ci.yml  label_check.yml  ossar.yml  pylint.yml
alembic/: env.py
alembic/versions/: 02849c8ce9b5_add_issue_priority.py  02cf5bd21429_employee_user_reln_fix.py  0d7eed897e14_add_reporter_id.py  1074cda7b0d5_use_numeric_for_lat_long.py  12e00c2496dc_team_schema.py  2eb918567fc5_delete_dedicate_dep_admin_table.py  2ec351933b72_regen_schema_for_citizen_table.py  31eb9c854ad9_add_department_admin_model.py  32400a1bc733_schema_for_user_table.py  3a257a3b97f0_department_and_team_relation_fix.py  455730de26af_add_user_role_relationship.py  49041f71a638_add_department_in_employee_direct.py  60b54533c0f7_add_embedding_for_similarity_search.py  61e5afa01a4f_model_for_false_issue_reports.py  62d7235ac632_otp_model.py  661eb1917d41_fix_typo_in_department_col_name.py  669f35b3e626_fix_broken_relationships.py  66d2a9739528_team_and_staff_relation_fix.py  74bd7b77f51b_create_base_tables.py  78e3ed42cec5_add_phash_for_attachments.py  877f0463730e_auth_user_model.py  8bdef9a4c38a_issue_locations.py  985fc2459d57_department_issue_reln.py  a4a8c284f1f8_pending_verification_enum.py  a57f023b08ec_team_aka_location.py  b27d4feac8bd_add_issue_label_column.py  b7c52ef83c91_otp_model.py  b976cbd74697_issue_attachments.py  bb4d23f8222a_add_col_for_storting_dupe_id.py  c2e94fbf0af5_fixup_issue_location.py  d06ed1e93345_add_contact_no.py  d22d81eb373b_schema_for_citizen_table.py  dd04e013db37_schema_for_role_and_department_table.py  f40b0553a449_add_rejected_issue.py  f437e1ac39dd_citizens_info_model.py  f66d73a13517_make_issue_id_unique.py
app/: celery_app.py  main.py
app/algorithms/: haversine.py
app/api/: deps.py
app/core/: config.py  constants.py  logger.py  logging.py
app/db/: base.py  session.py
app/exceptions/: auth_expection.py  otp_exception.py  s3_exception.py  task_exception.py
app/models/: __init__.py  attachment.py  citizens.py  department.py  department_admin.py  employee.py  issue.py  issue_location.py  issue_reports.py  otp_code.py  rejected_issue.py  roles.py  team.py  user.py
app/repositories/: citizen_repo.py  department_repo.py  employee_repo.py  issue_repo.py  otp_repo.py  role_repo.py  (+2 more)
dev_scripts/: clean.sh  make_migrations.sh
tests/: conftest.py  test_astar.py  test_health.py  test_logging.py  test_path_simplify.py  test_routes.py  test_utils.py
(+112 files in other folders)
